--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,7 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11722889.md#1" target="_blank">从身体2部位看出肝功能好坏 1招增强肝功能</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11722889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/liver-function0-1219-150x120.jpg" align ="left"></a>肝脏负有排毒的重要任务，但它却是个沉默的器官，由于没有神经，通常有了病变也不易察觉。中医则是根据“藏象学说”，通过一些外在表现，如眼睛、指甲探知肝功能。若要调理肝，必须兼顾治胆。每日敲打肝经与胆经各100～200下，有助于改善肝胆功能、促进代谢。中医养肝三大要诀：1. 养肝首重“戒怒”2. 起居有节，劳逸有度......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732338.md#1" target="_blank">温哥华明年地税增长7% 增幅十年新高</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/iStock-637692036-600x400-150x120.jpg" align ="left"></a>12月17日（周二），温哥华市议会通过了2020年预算，明年的地税平均增加7％。尽管低于上个月提议的8.2％，但增幅依然是十年来最高的。市议员阿德里安娜．卡尔（Adriane Carr）提出了预算的主要修正案，他说：“市议会（所考虑的）优先事项与公众的优先事项要保持一致。每个部门都要为减少支出而寻求途径，如提高效率、延.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:58 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732919.md#1" target="_blank">外皮酥脆肉汁多  制作美味炸鸡的9个秘诀</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732919.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_68601528_Subscription_L-150x120.jpg" align ="left"></a>无论是当作主菜、点心，或是下酒菜，在冷冷的天气里，热腾腾的炸鸡都很受欢迎。炸鸡虽看似简单，在家中料理时，如果能注意一些小细节，成果也能更软嫩多汁、香脆可口。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733106.md#1" target="_blank">在多伦多荷顿区 中产家庭买房 攒钱需要多久？</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733106.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_39571219-150x120.jpg" align ="left"></a>多伦多房价上涨，带动周边地区房价水涨船高，荷顿区也不例外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732742.md#1" target="_blank">漫步在云端 清境农场坐拥群山之间</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732742.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191219-Joway-travel-01-01--150x120.jpg" align ="left"></a>青青草原是清境农场人气最旺的景点，在碧绿的草地上，可以望见毛茸茸绵羊与牛只漫步，旖旎的原野风光搭配远方山峦叠翠的背景，和远处的欧式建筑遥相呼应，散发着北国风光.............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733062.md#1" target="_blank">未来半数年轻人买不起房 加拿大正迈向租房时代</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_40770295-150x120.jpg" align ="left"></a>加拿大一些大城市的房价上涨失控多年，最近几年涨幅虽放缓，但还是在涨，未来恐怕不到半数年轻人买得起房，加拿大正日益迈向租房时代。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:05 PM			</td></tr>
@@ -26,16 +23,11 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank">手工艺术大荟萃 德国圣诞市场上的精品</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/76ed2d990a39fbaf949cba916f035e7f-150x120.jpg" align ="left"></a>俗话说，会看的看门道。要说德国圣诞市场上值得保存的精品，就属那些精致独特的手工艺品了。今天我们就来稍作盘点，当然一定会挂一漏万，因为德国的手工艺品实在很丰富，我们就先从最著名的木制手工艺生产基地——埃尔茨山区开始介绍吧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank">用1个枕头就能做的燃脂运动！一边看电视一边瘦</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pillow-fitness-44-150x120.jpg" align ="left"></a>圣诞节、元旦、农历新年??随着冬季到来，一个又一个的节假日接踵而至。每天辛苦工作，放假最想做的就是躺在沙发上看电视、大啖美食犒赏自己，不过又怕多吃少动会变胖。不妨趁着看电视的时间，用一个枕头做简单的燃脂运动。不用花大钱去健身房、买健身器材，世界健身俱乐部（World Gym）教练Xin教你边看电视就能边瘦身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank">他从画里跑出来？摄影师苦心守候拍出奇妙佳作</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/30d201aec61204b1951d0fa2ce955cf0-150x120.jpg" align ="left"></a>游客到美术馆大多是为了欣赏艺术品而来的，但奥地利摄影师斯蒂芬?德拉桑（Stefan Draschan）和别人不一样；他却是为了欣赏 艺术品的游客而来的，他这一系列别有风味的作品，看起来即奇妙又有趣！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11734309.md#1" target="_blank">汽车维修问与答：换阀盖垫圈不导致大问题</a><br></h3>汽车维修问与答
-
-读者Frank问：您好，您好！我是Frank，我上周把我的车送去一家维修车行更换阀盖垫圈，因为我的车最近一直都在这里维修保养的。可是换了阀盖垫圈后我都还没有取车开走，车行老板说这个车发动机出问题了，要更换一个二手发动机，估计费用要$10,000-12,000加元。我这几天都蒙了，不知道怎么办了？因.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11734300.md#1" target="_blank">为什么要用电动汽车？</a><br></h3>
-
-1)?电动汽车更容易负担
-
-尽管新型的电动汽车比相应的汽油汽车价格要高，但是长期而言，几乎可以保证最终电动汽车会更省钱。全国各地的驾驶员每天通勤可以通过驾驶电动汽车，而不是汽油车来节省开支，这已经不是什么秘密了。在5年的时间里，平均每个驾驶员将节省4,000至5,000美元的燃油成本。
-
-&nbsp;.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank">搭乘全球第一架无塑班机 喝完咖啡也要吃掉咖啡杯</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5a9fa6784eeb19b61df8f3f6ce447b13-150x120.jpg" align ="left"></a>如果你搭乘纽西兰航空（Air New Zealand），端上来一杯香醇的咖啡时，空服员可能会告诉你，喝完咖啡，可以的话，请一起把咖啡杯吃掉吧！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/17/n11728098.md#1" target="_blank">小米香肠：雾台部落的回忆</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/17/n11728098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019121_shouhuihsu_rice-roll_01-150x120.jpg" align ="left"></a>杜瑞龙在雾台部落中算是顶尖人物，从他家摆饰的兽骨即可略知一二，他的头饰还有雄鹰的利爪，说起早年徒手抓雄鹰的过程，他还特地穿上原住民服饰，抓着雄鹰留下历史镜头，就怕日后说起这段经历没人愿意相信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/16/n11725349.md#1" target="_blank">家族聚会超开心 避免这些尴尬问题破坏气氛</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/16/n11725349.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pexels-1b-150x120.jpg" align ="left"></a>我们关心但尊重他人，放轻松却也守分寸，牢记每个人都有自己的见解，这一点很重要。体贴而又鼓舞人心的谈话，能让每一位参与者在家族聚会中拉近彼此的距离，感受温暖和快乐的互动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 3:50 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/15/n11723296.md#1" target="_blank">油脂原来有4大功效！选好油你需要知道的事</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/15/n11723296.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/oil-benefit_395365249-150x120.jpg" align ="left"></a>很多人认为油脂热量高、容易胖，有碍心血管健康，且是高血脂的主因；但有时你又听说橄榄油有益心血管健康，鱼油的DHA对大脑和眼睛健康很好?到底油脂是好东西还是坏东西、该不该吃、如何选择？现在，就让我们认识一下油脂这个营养素，学会如何正确看待它吧！油脂有四大功能，油脂包含饱和脂肪酸、不饱和脂肪酸，如ω-3脂肪酸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:39 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/16/n11726149.md#1" target="_blank">【C2食光-节气料理】博多水炊鸡肉锅 食材取胜的鲜甜味</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/16/n11726149.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/75bd8324cf7b9a69b534c337011f10ed-150x120.jpg" align ="left"></a>冬令进补应以温补暖胃料理为主。博多风水炊锅一道完全以食材取胜的料理，利用鸡肉，蔬菜和水做成的火锅，汤头不加任何调味。吃的时候搭配点橙醋、柚子胡椒及酱油享用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11732455.md#1" target="_blank">快餐不利健康 鹿特丹拟限制店家数量</a><br></h3>为了对抗肥胖，减少肥胖人口比例，帮助当地居民改善健康状况，荷兰鹿特丹市政府拟对本市快餐店的数量进行限制，重点限制范围是城市中心区域。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
