--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,9 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank">马云卸任后 在湖北获“新职”</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/181212095028100484-150x120.jpg" align ="left"></a>马云卸任阿里巴巴董事局主席后，日前获得中共湖北省政府“经济顾问”的头衔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 12:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737201.md#1" target="_blank">黄琦87岁母亲险遭黑手 呼吁外界关注</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737201.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-5-150x120.jpg" align ="left"></a>12月20日，黄琦的母亲，已87岁高龄的蒲文清老人下楼准备去为黄琦伸冤，遭到四名不明身份男子下狠手反复拉扯，导致重病在身的蒲文清在要倒地瞬间被旁边人扶住，其手上、身上多处出现淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737361.md#1" target="_blank">安全担忧 美海军限制使用抖音海外版</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8Y2-150x120.jpg" align ="left"></a>本周早些时候，美国海军禁止在政府提供的移动设备上使用抖音海外版TikTok，并称这个短视频应用会带来“网络安全威胁”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737276.md#1" target="_blank">天然气太贵民众偷烧煤 中共官员强行封灶台</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7d45b3c9a3db24ea4013d87bd3eac9a9-150x120.jpg" align ="left"></a>为减少空污，中国华北地区近年强推煤改气、煤改电，禁止冬季燃煤取暖。但因为天然气、电费过高，一些民众仍偷偷烧煤，使得近日官民冲突升高，甚至有村干部强行进入民宅用水泥封死灶台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank">【货币市场】 美股创历史最高 美元强势</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/money-notes-150x120.jpg" align ="left"></a>在货币市场周五（美东时间12月20日）北美交易时段，美元展现强势，美元分别对日元、英镑和欧元升值。美元彭博现货指数收于 97.69点，高于一周前的收盘指数97.172点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737218.md#1" target="_blank">美防长：美在中东的行动不影响聚焦中俄</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N641W-150x120.jpg" align ="left"></a>美国国防部长马克·埃斯珀(Mark Esper) 周五（12月20日）表示，美军将继续集中精力应对中共和俄罗斯的安全挑战，不会因为中东和其他地区局势而分散注意力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737119.md#1" target="_blank">大陆为何出现江湖“底朝天” 专家揭秘（上）</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737119.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sss-150x120.jpg" align ="left"></a>中国大陆枯水期来临之际，长江中下游武汉段出现了沿江滩涂的荒凉景象，甚至一些地段的江底湖底都露了出来，引发网民关注。那么，江底湖底朝天是什么原因所致？这个原因又将带来哪些生态恶果？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736943.md#1" target="_blank">标致雪铁龙从大陆撤资 传宝能接手</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604190946251767-150x120.jpg" align ="left"></a>有消息人士日前表示，宝能集团将接手长安标致雪铁龙50％股份，标致雪铁龙将退出中国市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:37 PM							</td></tr>
@@ -21,7 +16,11 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank">高校频爆丑闻 清华被曝出骗子北大出流氓</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zgzj-150x120.jpg" align ="left"></a>清华、北大是大陆最顶尖的学府，但仅在今年以来，这两所大学的丑闻频发。多名清华EMBA毕业生被曝涉嫌诈骗，而北大几名教师涉嫌性丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736341.md#1" target="_blank">中国烂尾楼遍布各地 住宅楼业主苦等无门</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/1701260005001758-150x120.jpg" align ="left"></a>中国烂尾项目遍布各地，涉及住宅、工业区、商业写字楼等众多项目，绝大部分是因为资金和债务问题，令业界进一步担忧中国房地产市场泡沫破裂风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735699.md#1" target="_blank">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1145305822-150x120.jpg" align ="left"></a>20日晚，陆媒搜狐网晒出汪峰在朋友圈发文的截图，上面写着：“宝宝已顺利出生，母子平安，辛苦老婆了！”宣布章子怡产子喜讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736394.md#1" target="_blank">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br></h3>澳门主权移交20周年，19日晚在东亚运动会体育馆举行文艺晚会，香港特首林郑月娥同丈夫林兆波都有出席。现场播放《歌唱祖国》时，当全场高歌拍掌时，唯独林兆波木然站立不配合的一幕引发各界热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735902.md#1" target="_blank">李宇春出道14年 两次被父亲要求退出娱乐圈</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735902.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1144042200-150x120.jpg" align ="left"></a>凭借《超级女声》冠军出道的李宇春，虽然现在影歌双栖、依然人气不衰，但14年来，她曾两次被其父亲要求退出娱乐圈。近日，李宇春偕父亲（春爸）接受陆媒《人物》杂志专访时，透露了这一消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735798.md#1" target="_blank">大陆又一长租公寓爆雷 老板被拘 总部搬空</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735798.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG111228352378-150x120.jpg" align ="left"></a>近日，大陆长租公寓品牌商缘涞国际“倒下”，创始人被刑拘，企业总部人去楼空。缘涞国际的爆雷只是揭开了“分散式”长租公寓破产的冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736290.md#1" target="_blank">云南红河州原公安局长落马 曾被海外追查</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xuyang-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>履新10个月后，中共云南省迪庆州委副书记许洋“涉嫌严重违纪违法”被查。许洋曾任红河州公安局局长、楚雄州楚雄市公安局局长多年，因参与迫害法轮功学员被海外组织追查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 7:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735942.md#1" target="_blank">通过未记录交易 中国资金外逃数额创纪录</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735942.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1209070929352039-150x120.jpg" align ="left"></a>北京正在加紧努力，以阻止资金流出，因为中国正在应对经济困境和紧张的贸易战。2015～2016两年资金外逃总额达1.28万亿美元，中共吸取上次教训，对于资金外流严重打击，并开放金融市场，以图吸取外资。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 7:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736032.md#1" target="_blank">大陆国资系进民营银行 坏帐激增恐继续恶化</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/63db8cd97d000c68b20fc198e1e995f5-150x120.jpg" align ="left"></a>今年以来，国资系大举进入民营银行，而所涉及的银行多数曾经是“明天系”和“安邦系”旗下机构，中国的官僚权贵面临再一次大洗牌，过程中也将中国银行业日益严重的坏帐风险暴露出来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11737039.md#1" target="_blank">郴州电视台台长与政法委书记联手敛财</a><br></h3>中共湖南省郴州市广播电视台前台长张春阳被指与亲家、前政法委书记刘志伟合谋敛财，共涉金额数百万元人民币。日前，张春阳案开庭审理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736993.md#1" target="_blank">吉林载37人巴士侧滑坠江 6人死亡</a><br></h3>12月21日，吉林通化市一辆载有39人的巴士在江边发生侧滑，造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736935.md#1" target="_blank">三商人实名举报：江西前副省长索贿上亿元</a><br></h3>近日，中共江西省前副省长、赣州市委书记、江西省人大副主任史文清，被当地三名商人公开实名向中纪委举报，指史大肆敛财，索贿上亿元（人民币，下同）的黄金或现金。此外，史文清还被举报包养多名情妇等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:54 PM							</td></tr>
@@ -29,5 +28,6 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736771.md#1" target="_blank">四川轻化工大学副教授因言受罚</a><br></h3>中国大专院校学术自由空间持续萎缩。四川轻化工大学副教授李志被指发表不当言论，违反了高校教师准则，近期受到校方行政处罚，并被调离其所任职的马克思主义学院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736741.md#1" target="_blank">题材敏感？《一级指控》疑遭中方施压禁上映</a><br></h3>港产片《一级指控》因题材涉指控官商勾结，疑因遭到中方压力，原订于今日（12月21日）起一连三日在港K11 Art House戏院上映的优先场突然被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11736026.md#1" target="_blank">大连Logo头奖疑抄迪士尼 网民：胆子真大</a><br></h3>大连最近举办首届大连文化创意和旅游纪念品大赛，并征选“大连城市Logo”，日前发布了得奖作品，但被发现得奖的“大连城市Logo”有多处抄袭嫌疑，引起热议。有网民说，“设计师胆真大，评委都是打酱油的吧？”“这评的是看谁最敢抄吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735959.md#1" target="_blank">社交名媛张瀞仁猝逝 刘嘉玲安以轩发文悼念</a><br></h3>活跃于大陆社交圈的名媛张瀞仁，惊传12月20日凌晨在日本北海道猝逝。今年53岁的她，是“台聚集团”的少奶奶，经常出席各种时尚活动，与演艺圈许多明星关系匪浅，就连微博名“上海吴太”也是刘嘉玲帮取名。噩耗传来，刘嘉玲、安以轩等圈内好友纷纷发文悼念。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
